hh/src/snapshots/hh__inspect__tests__snapshot_diff_created_file.snap
---
source: hh/src/inspect.rs
expression: out
---
diff -- a/created.txt b/created.txt
--- /dev/null
+++ b/created.txt
+created-content
