hh/src/snapshots/hh__inspect__tests__snapshot_ndjson_stream.snap
---
source: hh/src/inspect.rs
expression: ndjson
---
{"body":{"text":"please list the files"},"correlates":null,"file_change":null,"id":1,"kind":"user_message","schema":1,"session":{"id":"018e2c5a-4a00-7000-8000-000000a1b2c3","short_id":"a1b2c3"},"step":1,"summary":"list the files","ts_ms":0}
{"body":{"text":"$ ls\nfile.txt\n"},"correlates":null,"file_change":null,"id":7,"kind":"terminal_output","schema":1,"session":{"id":"018e2c5a-4a00-7000-8000-000000a1b2c3","short_id":"a1b2c3"},"step":null,"summary":"terminal chunk","ts_ms":500}
{"body":{"input":{"command":"ls -la"},"name":"Bash"},"correlates":null,"file_change":null,"id":2,"kind":"tool_call","schema":1,"session":{"id":"018e2c5a-4a00-7000-8000-000000a1b2c3","short_id":"a1b2c3"},"step":2,"summary":"tool_call: Bash","ts_ms":1000}
{"body":{"content":"file.txt","is_error":false},"correlates":2,"file_change":null,"id":3,"kind":"tool_result","schema":1,"session":{"id":"018e2c5a-4a00-7000-8000-000000a1b2c3","short_id":"a1b2c3"},"step":2,"summary":"tool_result: ok","ts_ms":1500}
{"body":{"change_kind":"created","path":"created.txt"},"correlates":null,"file_change":{"after_hash":"ca95796b742e232d1de194a4af2c5b802138b1870a198a28b6562bf8f3734798","before_hash":null,"change_kind":"created","is_binary":false,"path":"created.txt"},"id":4,"kind":"file_change","schema":1,"session":{"id":"018e2c5a-4a00-7000-8000-000000a1b2c3","short_id":"a1b2c3"},"step":3,"summary":"created.txt created","ts_ms":2000}
{"body":{"text":"here are the files"},"correlates":null,"file_change":null,"id":5,"kind":"agent_message","schema":1,"session":{"id":"018e2c5a-4a00-7000-8000-000000a1b2c3","short_id":"a1b2c3"},"step":4,"summary":"done listing","ts_ms":2500}
{"body":{"message":"permission denied"},"correlates":null,"file_change":null,"id":6,"kind":"error","schema":1,"session":{"id":"018e2c5a-4a00-7000-8000-000000a1b2c3","short_id":"a1b2c3"},"step":5,"summary":"boom","ts_ms":3000}
