hh/src/snapshots/hh__inspect__tests__snapshot_step_detail_error.snap
---
source: hh/src/inspect.rs
expression: out
---
Step 5 · ERR · boom · 00:00:03

ERR boom
  {
    "message": "permission denied"
  }
