hh/src/snapshots/hh__inspect__tests__snapshot_step_json.snap
---
source: hh/src/inspect.rs
expression: pretty
---
{
  "events": [
    {
      "body": {
        "input": {
          "command": "ls -la"
        },
        "name": "Bash"
      },
      "correlates": null,
      "file_change": null,
      "id": 2,
      "kind": "tool_call",
      "schema": 2,
      "session": {
        "id": "018e2c5a-4a00-7000-8000-000000a1b2c3",
        "short_id": "a1b2c3"
      },
      "step": 2,
      "summary": "tool_call: Bash",
      "ts_ms": 1000
    },
    {
      "body": {
        "content": "file.txt",
        "is_error": false
      },
      "correlates": 2,
      "file_change": null,
      "id": 3,
      "kind": "tool_result",
      "schema": 2,
      "session": {
        "id": "018e2c5a-4a00-7000-8000-000000a1b2c3",
        "short_id": "a1b2c3"
      },
      "step": 2,
      "summary": "tool_result: ok",
      "ts_ms": 1500
    }
  ],
  "kind": "tool_call",
  "schema": 2,
  "session": {
    "id": "018e2c5a-4a00-7000-8000-000000a1b2c3",
    "short_id": "a1b2c3"
  },
  "step": 2,
  "summary": "tool_call: Bash",
  "ts_ms": 1000
}
